--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "electron-vite-react",
-  "version": "2.2.0",
+  "name": "exploro-editor",
+  "version": "1.0",
   "main": "dist-electron/main/index.js",
-  "description": "Electron Vite React boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
   "private": true,
   "debug": {
@@ -19,20 +17,27 @@
     "e2e": "playwright test"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0"
+    "@uiw/react-codemirror": "^4.19.16",
+    "electron-updater": "^5.3.0",
+    "nanoid": "^4.0.2",
+    "react-icons": "^4.8.0",
+    "react-resizable-panels": "^0.0.42",
+    "styled-components": "^5.3.10",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@playwright/test": "^1.32.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "electron": "^23.2.0",
+    "@playwright/test": "^1.33.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^4.0.0",
+    "electron": "^24.1.3",
     "electron-builder": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.60.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.1.4",
+    "sass": "^1.62.1",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.3",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-electron-renderer": "^0.14.1"
   },
