--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@uiw/react-codemirror": "^4.19.16",
     "electron-updater": "^5.3.0",
+    "fs-extra": "^11.1.1",
     "nanoid": "^4.0.2",
     "react-icons": "^4.8.0",
     "react-resizable-panels": "^0.0.42",
