--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uiw/react-codemirror": "^4.19.16",
     "electron-updater": "^5.3.0",
     "fs-extra": "^11.1.1",
+    "lowdb": "^6.0.1",
     "nanoid": "^4.0.2",
     "react-icons": "^4.8.0",
     "react-resizable-panels": "^0.0.42",
